@@ -567,6 +567,8 @@ Version 1.13.0-dev:
      hexes.
    * Fix bug #23243: Segfault while clicking during [delay] in prestart.
    * Remove support for legacy style unit abilities descriptions.
+   * Fixed bug #23445: set default build type in cmake to "Release" to ensure
+     that the game is not unoptimized
 
 Version 1.11.11:
  * Add-ons server:
